2004-07-09  Ilja Booij  <ilja@ic-s.nl>

	* pop3.c (pop3_handle_connection): fixed some possible mem leaks 
	after reports from Hans Kristian Rosbach.

	* sql/postgresql/migrate_from_1.x_to_2.0.pgsql: changed pbsp.idnr
	FROM BIGINT to INT8.

	* sql/postgresql/create_tables.pgsql: changed pbsp.idnr from BIGINT
	to INT8

2004-07-06  Ilja Booij  <ilja@ic-s.nl>

	* maintenance.c (main): gives more useful help. -f options is now
	used for setting config file, -f for repairing broken integrity.

	* man/dbmail-maintenance.1: updated wrt changes in command line
	options.

2004-06-29  Ilja Booij  <ilja@ic-s.nl>

	* INSTALL.postfix: updated wrt to return path setting.

	* forward.c (forward): now calls the sendmail executable with the
	-f switch to set the return path to the original return path.

2004-06-28  Ilja Booij  <ilja@ic-s.nl>

	* imaputil.c (build_args_array_ext): also accepts {681+} as mail size (not only
	{681} (681 is a random number!). This fixes an IMAP APPEND problem with
	Mozilla Thunderbird.

2004-06-18  Ilja Booij  <ilja@ic-s.nl>

	* main.c (read_whole_message_pipe): added (void *) casts to memcpy's
	arguments.

	* imaputil.c (build_args_array_ext): added (void *) casts to memcpy's
	arguments.
	(build_args_array): added (void *) casts to memcpy's arguments.

	* imapcommands.c (_ic_expunge): added (void *) casts to memcpy's
	arguments.

	* imap4.c (IMAPClientHandler): added (void *) casts to memcpy's
	arguments.

	* db.c (convert_inbox_to_uppercase): added (void *) casts to memcpy's
	arguments.

	* lmtp.c (read_whole_message_network): check if a line that's been
	read has length 0 or 1. If so, step over the line. Secondly, memcpy's
	arguments are now cast to (void *)

2004-06-16  Ilja Booij  <ilja@ic-s.nl>

	* misc.c (ci_write): ci_write() moved here

	* misc.h: ci_write() moved here.

	* lmtp.c: now uses ci_write instead of fprintf to write to socket.

	* imaputil.h: ci_write() removed (moved to misc.h)

	* imaputil.c: ci_write() removed (moved to misc.c)
